--- a/book.bib
+++ b/book.bib
@@ -17,6 +17,12 @@ publisher = { Oxford U.P London },
 year = { 1968 },
 }
 
+@article{percival2015confirmation,
+  title={Confirmation versus falsificationism},
+  author={Percival, Ray Scott},
+  year={2015}
+}
+
 @Book{ hempel-pos,
 author = { Hempel, Carl G. },
 title = { Philosophy of natural science},
