added objection to popper asymmetry

--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -763,6 +763,10 @@ This asymmetry forms the basics of Karl Popper's (1902-1994) falsificationism.
   Never accept any hypothesis as true - consider non-falsified hypotheses as ``not-rejected yet''.
 \end{itemize}
 
+\begin{quote}
+One objection to this {[}the asymmetry between confirmation and falsification{]} holds that the asymmetry is an illusion, because whenever we refute a universal statement we thereby verify its negation. A universal statement ``All x are y'' is equivalent to ``There is no non-y x.'' Therefore, when we refute ``All apples are green'' we automatically verify ``There is a non-green apple.'' --- \citep{percival2015confirmation}
+\end{quote}
+
 Popper is quite radical in this last step. For him, confirmation places no role at all. One can never infer the truth of hypotheses - Popper argues - from the observations regarding their implications. Not even increase the confidence in the truth of the hypothesis. Popper hoped to avoid Hume's problem of induction by not employing induction in science. Popper thought that science was and should be deductive, and therefore that the lack of justification for inductive inferences was not as damaging for science. Below example is illustrative.
 
 \begin{quote}
